--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,6 +19,6 @@
       "target": "esnext"
     },
     "exclude": ["node_modules"],
-    "include": ["**/*.ts", "**/*.tsx", "components/AutoplayVideo"]
+    "include": ["**/*.ts", "**/*.tsx"]
   }
   
